--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -13,8 +13,8 @@
 		<h2>{% trans %}This is the publishing portal{% endtrans %}</h2>
 		<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
 		<p>
-			<a href="{{base}}/register" class="btn btn-success btn-lg">{% trans %}Register now{% endtrans %}</a>
-			<a href="{{base}}/login" class="btn btn-primary btn-lg">{% trans %}Login{% endtrans %}</a>
+			<a href="{{base}}/register" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
+			<a href="{{base}}/login" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
 		</p>
 	</div>
 </div>
