slightly update publishing portal

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -85,7 +85,7 @@
 	<div class="container">
 		<h2>{% trans %}Welcome to the publishing portal!{% endtrans %}</h2>
 		<p>{% trans %}Here you can publish your addons and make them available to your fans. Click the button below to get started.{% endtrans %}</p>
-		<p><a href="#" class="btn btn-lg btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
+		<p><a href="#" class="btn btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
 	</div>
 </div>
 <div class="container">
