update oauth functionality

--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -42,7 +42,7 @@
 			</div>
 			<div class="social">
 				<h4>{% trans %}Or, select your login service:{% endtrans %}</h4>
-			{% include 'functions/openid.twig' %}
+			{% include 'functions/oauth.twig' %}
 			</div>
 		</div>
 		<div class="col-md-8">
