--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -33,7 +33,7 @@
 			<hr>
 			<div class="social">
 				<h4>{% trans %}Alternatively use a login service:{% endtrans %}</h4>
-			{% include 'functions/openid.twig' %}
+			{% include 'functions/oauth.twig' %}
 			</div>
 		</div>
 		<div class="col-md-8">
