--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -112,7 +112,7 @@
 				</form>
 			</div>
 			<h4 id="link">{% trans "Login services" %}</h4>
-			{% include 'functions/openid.twig' %}
+			{% include 'functions/oauth.twig' %}
 		</div>
 	</div>
 </div>
