updated management interfaces

--- a/app/templates/manage/administration.twig
+++ b/app/templates/manage/administration.twig
@@ -11,7 +11,7 @@
 		<div class="col-md-4">
 			<h2>{% trans %}Overview{% endtrans %}</h2>
 			<h3>{% trans %}Management{% endtrans %}</h3>
-			<a href="{{base}}/users?filter=moderators" class="btn btn-primary">Show moderators</a>
+			<a href="{{base}}/users?filter=moderators" class="btn btn-primary">Moderators</a>
 		</div>
 		<div class="col-md-4">
 			<h2>{% trans %}Front page{% endtrans %}</h2>
