--- a/app/templates/manage/moderation.twig
+++ b/app/templates/manage/moderation.twig
@@ -11,17 +11,14 @@
 		<div class="col-md-4">
 			<h2>{% trans %}Overview{% endtrans %}</h2>
 			<h3>{% trans %}Users{% endtrans %}</h3>
-			<a href="{{base}}/users" class="btn btn-default">Show all users</a>
-			<a href="{{base}}/users?filter=bans" class="btn btn-danger">Show bans</a>
+			<a href="{{base}}/users" class="btn btn-default">{% trans %}Users{% endtrans %}</a>
+			<a href="{{base}}/users?filter=bans" class="btn btn-danger">{% trans %}Banned{% endtrans %}</a>
 		</div>
-		<div class="col-md-4">
-			<h2>{% trans %}Addons{% endtrans %}</h2>
-			<h3>{% trans %}Awaiting approval{% endtrans %}</h3>
+		<div class="col-md-8">
+			<h2>{% trans %}Queues{% endtrans %}</h2>
+			<h3>{% trans %}Addons{% endtrans %}</h3>
 			<p class="alert alert-warning">{% trans %}There are no addons in the approval queue.{% endtrans %}</p>
-		</div>
-		<div class="col-md-4">
-			<h2>{% trans %}Contact form{% endtrans %}</h2>
-			<h3>{% trans %}Queue{% endtrans %}</h3>
+			<h3>{% trans %}Contact form{% endtrans %}</h3>
 			<p class="alert alert-warning">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
 		</div>
 	</div>
