--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -11,7 +11,7 @@
 		{% if not self and user_administrator or (user_moderator and moderator == false) %}
 			<h2 id="moderate">{% trans %}Moderation{% endtrans %}</h2>
 			<p>
-				<a href="" class="btn btn-default">{% trans %}Edit user{% endtrans %}</a>
+				<a href="{{username}}/edit" class="btn btn-default">{% trans %}Edit user{% endtrans %}</a>
 				<a href="#ban" data-toggle="collapse" data-target="#collapse-ban" class="btn btn-danger">{% trans %}Ban user{% endtrans %}</a>
 			</p>
 			<div id="collapse-ban" class="collapse{% if alerts.ban %} in{% endif %}">
