--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -43,7 +43,7 @@
 </div>
 <div class="jumbotron">
 	<div class="container">
-		<a href="#"><img src="{{base}}/img/game/{{short}}.png" class="pull-right jumbo-image hidden-xs"></a>
+		<a href="#"><img src="{{component}}/img/game/{{short}}.png" class="pull-right jumbo-image hidden-xs"></a>
 		<h1>{% trans %}No addons available{% endtrans %}</h1>
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 		{% if user_login %}<p><a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a></p>{% endif %}
