--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
 		<link href="{{base}}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="{{component}}/css/lorry.min.css" rel="stylesheet">
+		<link href="{{component}}/css/lorry.css" rel="stylesheet">
 		<meta property="og:title" content="{{title|default(brand)}}">
 		<meta property="og:image" content="{{component}}/img/logo.png">
 		<meta property="og:site_name" content="{{brand}}">
