updated about page

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -41,10 +41,10 @@
 				<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
 				<dt><a href="http://twig.sensiolabs.org">Twig</a></dt>
 				<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
-				<dt><a href="http://lesscss.org/">LESS CSS</a></dt>
-				<dd>using <a href="http://leafo.net/lessphp/">lessphp</a> built by <a href="http://twitter.com/fat">@moonscript</a>,</dd>
+				<dt><a href="http://lesscss.org/">Less</a></dt>
+				<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
 				<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
-				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and contributors.</dd>
+				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>.</dd>
 			</dl>
 		</div>
 		<div class="col-md-4">
