update registration page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -15,6 +15,12 @@ a.text {
 	font-size: 1.2em;
 }
 
+.popover {
+	width: 280px;
+	max-width: 100%;
+	margin-bottom: 60px;
+}
+
 #mainnav {
 	margin-bottom: 0px;
 }
