--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -13,19 +13,19 @@
 			<form id="form-register" action="{{filename}}" method="post" role="form">
 				<div class="form-group">
 					<label for="username">{% trans "Username" %}</label>
-					<input type="text" class="form-control" name="username" id="username" placeholder="{% trans "Username" %}" pattern="[a-zA-Z0-9_]+" title="{% trans %}Your username may contain letters, numbers and underscores and must be between 3 and 16 characters long.{% endtrans %}" {% if username %} value="{{username}}" {% endif %}maxlength="16" {% if username_invalid or not username %}autofocus {% endif %}required>
+					<input type="text" class="form-control" name="username" id="username" placeholder="{% trans "Username" %}" pattern="[a-zA-Z0-9_]+" data-content="{% trans %}Your username may contain letters, numbers and underscores and must be between 3 and 16 characters long.{% endtrans %}" {% if username %} value="{{username}}" {% endif %}maxlength="16" {% if username_invalid %}autofocus {% endif %}required>
 				</div>
 				<div class="form-group">
 					<label for="email">{% trans "Email address" %}</label>
-					<input type="email" class="form-control" name="email" id="email" placeholder="{% trans "Email address" %}" title="{% trans %}We require your email address so that we can verify you if you should forget your login details.{% endtrans %}" {% if email%}value="{{email}}" {% endif %}required>
+					<input type="email" class="form-control" name="email" id="email" placeholder="{% trans "Email address" %}" data-content="{% trans %}We require your email address so that we can verify you if you should forget your login details.{% endtrans %}" {% if email%}value="{{email}}" {% endif %}required>
 				</div>
 				{% if not oauth %}<div class="form-group">
 					<label for="password">{% trans "Password" %}</label>
-					<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" title="{% trans %}You password is stored securely. We require at least 8 characters for your security and are unable to send you this password if you should forget it.{% endtrans %}" required>
+					<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" data-content="{% trans %}You password is stored securely. We require at least 8 characters for your security and are unable to send you this password if you should forget it.{% endtrans %}" required>
 				</div>
 				<div class="form-group">
 					<label for="password-repeat">{% trans "Confirm password" %}</label>
-					<input type="password" class="form-control" name="password-repeat" id="password-repeat" placeholder="{% trans "Confirm password" %}" title="{% trans %}Please repeat your password to ensure you have spellt it correctly.{% endtrans %}" required>
+					<input type="password" class="form-control" name="password-repeat" id="password-repeat" placeholder="{% trans "Confirm password" %}" required>
 				</div>
 				{% else %}
 				<input type="hidden" name="use-oauth" value="1">
@@ -73,17 +73,13 @@
 {{ parent() }}
 
 $(document).ready(function() {
-var options = {placement:'bottom', trigger:'focus'};
-$('#form-register input').each(function() {
-$(this).tooltip(options);
-$(this).addClass('noerror')
-var require = function() {$(this).removeClass('noerror');};
-$(this).keypress(require);
-$(this).blur(require);
-});
-if($('#username').attr('autofocus')) {
-// trigger the focus event for the tooltip
-$('#username').focus();
-}
+	var options = {placement:'top', trigger:'focus', container: '#form-register'};
+	$('#form-register input').each(function() {
+		$(this).popover(options);
+		if($('#username').attr('autofocus')) {
+			// trigger the focus event for the tooltip
+			$('#username').focus();
+		}
+	});
 });
 {% endblock %}
