--- a/web/components/lorry/css/lorry.css
+++ b/web/components/lorry/css/lorry.css
@@ -8,6 +8,11 @@ a.text {
 .carousel-caption h3 {
   font-size: 1.2em;
 }
+.popover {
+  width: 280px;
+  max-width: 100%;
+  margin-bottom: 60px;
+}
 #mainnav {
   margin-bottom: 0px;
 }
