readded bootstrap and jquery as part of source, reworked file structure

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -6,10 +6,10 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="shortcut icon" href="{{base}}/img/favicon.ico" type="image/x-icon">
-		<link href="{{base}}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="{{component}}/css/lorry.css" rel="stylesheet">
+		<link href="{{resources}}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{resources}}/lorry/css/lorry.css" rel="stylesheet">
 		<meta property="og:title" content="{{title|default(brand)}}">
-		<meta property="og:image" content="{{component}}/img/logo.png">
+		<meta property="og:image" content="{{component}}/lorry/img/logo.png">
 		<meta property="og:site_name" content="{{brand}}">
 	</head>
 	<body>{% block body %}
@@ -32,9 +32,9 @@
 			</footer>
 		</div>
 	{% endblock %}
-		<script src="{{base}}/components/jquery/jquery.min.js"></script>
-		<script src="{{base}}/components/bootstrap/js/bootstrap.min.js"></script>
-		<script src="{{component}}/js/lorry.js"></script>
+		<script src="{{resources}}/jquery/jquery-2.1.0.min.js"></script>
+		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
+		<script src="{{resources}}/lorry/js/lorry.js"></script>
 		<script>{% block javascript %}{% endblock %}</script>
 		<script>(function() {
 				if ("-ms-user-select" in document.documentElement.style && navigator.userAgent.match(/IEMobile\/10\.0/)) {
