--- a/app/templates/functions/oauth.twig
+++ b/app/templates/functions/oauth.twig
@@ -4,8 +4,8 @@
 	{% else %}
 	<a href="#by-openid" class="btn btn-default" data-toggle="collapse" data-target="#by-openid">{% trans "OpenID" %}</a>
 	{% endif %}
-	<a href="?{% if oauth.google %}remove-{% endif %}oauth=google{% if oauth.google %}&state={{state}}{% endif %}#oauth" class="btn btn-danger">{% trans "Google" %}{% if oauth.google %} <span class="glyphicon glyphicon-link"></span>{% endif %}</a>
-	<a href="?{% if oauth.facebook %}remove-{% endif %}oauth=facebook{% if oauth.facebook %}&state={{state}}{% endif %}#oauth" class="btn btn-primary">{% trans "Facebook" %}{% if oauth.facebook %} <span class="glyphicon glyphicon-link"></span>{% endif %}</a>
+	<a href="?{% if oauth.google %}remove-{% endif %}oauth=google{% if oauth.google %}&state={{state}}{% endif %}#oauth" class="btn btn-google">{% trans "Google" %}{% if oauth.google %} <span class="glyphicon glyphicon-link"></span>{% endif %}</a>
+	<a href="?{% if oauth.facebook %}remove-{% endif %}oauth=facebook{% if oauth.facebook %}&state={{state}}{% endif %}#oauth" class="btn btn-facebook">{% trans "Facebook" %}{% if oauth.facebook %} <span class="glyphicon glyphicon-link"></span>{% endif %}</a>
 </p>
 {% if not oauth.openid %}<div class="collapse" id="by-openid">
 	<form role="form" action="{{filename}}?oauth=openid" method="post" class="form-inline">
