make email login button primary instead of success on login.twig

--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -36,7 +36,7 @@
 						<label for="email">{% trans "Email address" %}</label>
 						<input type="email" class="form-control" name="email" id="email"{% if email %} value="{{email}}"{% endif %} placeholder="{% trans "Email address" %}" required{% if email_focus %} autofocus{% endif %}>
 					</div>
-					<button class="btn btn-success" type="submit">{% trans "Send one-time login" %}</button>
+					<button class="btn btn-primary" type="submit">{% trans "Send one-time login" %}</button>
 				</form>
 				<hr>
 			</div>
