make logout from all other devices a warning button

--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -112,7 +112,7 @@
 			<div class="collapse" id="remote-logout-confirm">
 				<form method="post" action="{{filename}}?remote-logout" role=form">
 					<input type="hidden" name="state" value="{{state}}">
-					<button type="submit" class="btn btn-info">{% trans "Log out all other devices" %}</button>
+					<button type="submit" class="btn btn-warning">{% trans "Log out all other devices" %}</button>
 				</form>
 			</div>
 			<h4 id="oauth-services">{% trans "Login services" %}</h4>
