fix incorrect links

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -67,7 +67,7 @@
 				<dd>{% trans %}early feedback and thoughts{% endtrans %},</dd>
 				<br>
 				<div class="head">
-					<dt><a href="https://beheh.de"><img src="{{component}}/img/benedict.png" class="img-circle">Benedict Etzel</a> <span class="text-muted">(<a href="{{base}}/users/B_E" class="text-muted">B_E</a>)</span></dt>
+					<dt><a href="https://beheh.de"><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">Benedict Etzel</a> <span class="text-muted">(<a href="{{base}}/users/B_E" class="text-muted">B_E</a>)</span></dt>
 					<dd>{% trans %}idea & development{% endtrans %}.</dd>
 				</div>
 			</dl>
