--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<h3>{% trans %}Clonk Rage{% endtrans %}</h3>
-			<p><img src="{{component}}/img/game/rage.png"></p>
+			<p><img src="{{resources}}/custom/game/rage.png"></p>
 			<p>{% trans %}The classic game with hundreds of community-built, high-quality addons. Magical wars, strategic shooters and futuristic settling: Clonk Rage has it all.{% endtrans %}</p>
 			<p>{% trans %}Often the sheer selection is overwelming, so be sure to spread the word and vote for the addons you like.{% endtrans %}</p>
 			<p>
@@ -21,7 +21,7 @@
 		</div>
 		<div class="col-md-4">
 			<h3>{% trans %}OpenClonk{% endtrans %}</h3>
-			<p><img src="{{component}}/img/game/openclonk.png"></p>
+			<p><img src="{{resources}}/custom/game/openclonk.png"></p>
 			<p>{% trans %}The opensource successor to the Clonk series, built by players and developers of the previous Clonk titles.{% endtrans %}</p>
 			<p>{% trans %}Although the addon selection is still limited, OpenClonk completely reimaginges a great part of the game and greatly refines the technology, now supporting three-dimensional models within the game.{% endtrans %}</p>
 			<p>
