--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -16,7 +16,7 @@
 				<input type="text" class="form-control" name="username" id="username" value="{{username}}" required disabled>
 			</div>
 			<div class="form-group">
-				<div class="alert alert-warning">{% trans "Contact us to change your username." %}</div>
+				<div class="alert alert-info">{% trans "Contact us to change your username." %}</div>
 			</div>
 			<h3 id="profiles">{% trans "Linked profiles" %}</h3>
 		{% include 'functions/alert.twig' with {'selector' : 'profiles'} %}
@@ -38,7 +38,7 @@
 		<div class="col-md-4">
 			<h2 id="account">{% trans "Account" %}</h2>
 			<h3 id="contact">{% trans "Contact details" %}</h3>
-		{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
+			{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
 			<form role=form" method="post" action="{{filename}}?change-contact">
 				<input type="hidden" name="state" value="{{state}}">
 				<div class="form-group">
@@ -46,9 +46,17 @@
 					<input type="email" class="form-control" name="email" id="email" value="{{email}}" required{% if focus_email %} autofocus{% endif %}>
 				</div>
 				<div class="form-group">
+					{% if activated %}
 					<button type="submit" class="btn btn-default">{% trans "Confirm email address" %}</button>
+					{% else %}
+					<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
+					<a href="#" class="btn btn-warning">{% trans "No confirmation email?" %}</a>
+					{% endif %}
 				</div>
 			</form>
+			{% if not activated %}
+			<div class="alert alert-warning">{% trans %}You need to confirm your email address.{% endtrans %}</div>
+			{% endif %}
 			<h3 id="language">{% trans "Language" %}</h3>
 			<form role=form" method="post" action="{{filename}}?change-language">
 				<input type="hidden" name="state" value="{{state}}">
@@ -69,7 +77,7 @@
 			<p><a href="#remove-account" data-toggle="collapse" data-target="#remove-account-confirm">{% trans %}Would you like to remove your account?{% endtrans %}</a></p>
 			<div class="collapse" id="remove-account-confirm">
 				<form role="form" method="post" action="{{filename}}?remove-account">
-				<input type="hidden" name="state" value="{{state}}">
+					<input type="hidden" name="state" value="{{state}}">
 					<div class="alert alert-danger">
 						<strong>{% trans %}Removing your account is final.{% endtrans %}</strong> {% trans %}You will permanently loose control of all your uploaded addons.{% endtrans %}
 					</div>
