updated addon game page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -89,9 +89,15 @@ dt {
 	margin-top: 8px;
 }
 
+.media-heading {
+	display: inline-block;
+}
+
+.media-heading + .badge {
+	vertical-align: text-bottom;
+}
 
 @import 'buttons.less';
-
 
 /* IE fixes */
 
