--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -39,28 +39,28 @@
 		{% if not self %}
 		<div class="col-md-4">
 			<h2 id="security">{% trans "Support" %}</h2>
-			<p><a href="" class="btn btn-default">Reset password</a> <a href="" class="btn btn-default">Reset login services</a></p>
-			<p><a href="" class="btn btn-danger">Remove account</a></p>
+			<label class="checkbox"><input type="checkbox" id="support-confirm"> {% trans %}Please confirm this user should be moderated.{% endtrans %}</label>
+			<a href="" class="btn btn-default btn-block support-button" disabled="">{% trans %}Reset password{% endtrans %}</a>
+			<a href="" class="btn btn-default btn-block support-button" disabled="">{% trans %}Reset login services{% endtrans %}</a>
+			{% if user_administrator %}
+			<label class="checkbox"><input type="checkbox" id="remove-confirm"> {% trans %}Please confirm this user should be removed.{% endtrans %}</label>
+			<button type="submit" class="btn btn-danger btn-block" id="remove-button" disabled="">Konto permanent entfernen</button>
+			{% endif %}
 		</div>
 		{% endif %}
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<h2>{% trans %}Moderation protocol{% endtrans %}</h2>
+			<div class="alert alert-info">{% trans %}This account has not been moderated in the past.{% endtrans %}</div>
+		</div>
+	</div>
 </div>
+
 {% endblock %}
 
 {% block javascript %}
 {{ parent() }}
-
-$(document).ready(function() {
-$('#form-password input').each(function() {
-$(this).addClass('noerror')
-var require = function() {$(this).removeClass('noerror');};
-$(this).keypress(require);
-$(this).blur(require);
-});
-
-$('#language-setting').change(function() {
-$(this).closest('form').submit();
-});
 
 $('#remove-confirm').prop('checked', false);
 
@@ -71,5 +71,19 @@ $('#remove-button').prop('disabled', false);
 $('#remove-button').prop('disabled', true);
 }
 });
+
+
+$('#support-confirm').prop('checked', false);
+
+$('#support-confirm').change(function() {
+	if($(this).prop('checked')) {
+		$('.support-button').each(function() {
+			$(this).prop('disabled', false);
+		});
+	} else {
+		$('.support-button').each(function() {
+			$(this).prop('disabled', true);
+		});
+	}
 });
 {% endblock %}
