--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-navbar-collapse">
-				<span class="sr-only">{% trans %}Toggle navigation{% trans %}</span>
+				<span class="sr-only">{% trans %}Toggle navigation{% endtrans %}</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
