update clonk page

--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -32,15 +32,15 @@
 		<div class="col-md-4">
 			<h3>{% trans %}&hellip;only just the beginning{% endtrans %}</h3>
 			<p>{% trans %}Clonk lives from its fans, with dedicated players creating high-quality addons.{% endtrans %}</p>
-			<p>{% trans %}The series appeals to all ages alike.{% endtrans %}</p>
-			<a href="#" class="btn">{% trans %}View the addons{% endtrans %}</a>
+			<p>{% trans %}The series appeals to all ages alike and has been around for many years. Addons exist in a huge variety of gameplay and genre, and Lorry offers a central platform for the best of them.{% endtrans %}</p>
+			<a href="{{base}}" class="btn btn-success">{% trans %}View the addons{% endtrans %}</a>
 		</div>
 	</div>
 	<hr>
 	<div class="row">
 		<div class="col-md-8">
 			<h2>{% trans %}Create new content for Clonk{% endtrans %}</h2>
-			<p>{% trans %}The official game development of Clonk Rage has halted, therefore the community is creating an open source succesor - OpenClonk.{% endtrans %}</p>
+			<p>{% trans %}The official development of Clonk Rage has halted, therefore the community is creating an open source succesor - OpenClonk.{% endtrans %}</p>
 			<p>{% trans %}Both games are different and alike, but the majority of all addons have been created for Clonk Rage. Once you've created something awesome you can distribute it via Lorry, making it instantly available for any interested player.{% endtrans %}</p>
 			<p>
 				<a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a>
