--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -28,7 +28,7 @@
 		<div class="container">
 			<footer>
 				<p class="visible-xs">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}<span class=""> · <a class="text" href="{{base}}/about">{% trans "About us" %}</a> · <a class="text" href="{{base}}/contact"><span>{% trans "Contact" %}</span></a></span></p>
+				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About us" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
 			</footer>
 		</div>
 	{% endblock %}
