--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -73,8 +73,7 @@ footer span, footer span a {
 	float: left;
 	margin-top: 5px;
 	margin-right: 10px;
-	-webkit-transform-style: preserve-3d;
-	-webkit-transition: -webkit-transform 1s;
+	.transition-transform(1s);
 }
 
 .jumbo-image {
@@ -82,7 +81,7 @@ footer span, footer span a {
 }
 
 .head:hover img {
-	-webkit-transform: rotateY(360deg);
+	.rotateY(360deg);
 }
 
 dt {
