--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -13,8 +13,9 @@
 			<p>{% trans %}We here are fans of Clonk. We built this site as members of our community for the game and want to do our best.{% endtrans %}</p>
 			<p>{% trans %}If you have any wishes or should encounter any problem, do not hesitate to contact us:{% endtrans %}</p>
 			<form method="post">
+				{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
 				<div class="form-group">
-					<textarea class="form-control" rows="6" required></textarea>
+					<textarea class="form-control contact-form" name="feedback" rows="6" required></textarea>
 				</div>
 				<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
 			{% if by %}
