--- a/app/templates/email/base.twig
+++ b/app/templates/email/base.twig
@@ -1,5 +1,7 @@
+<p>{% trans %}Hi there,{% endtrans %}</p>
+
 {% block content %}
-	No content availabe.
+<p>{% trans %}No content available.{% endtrans %}</p>
 {% endblock %}
---
-Sent by Lorry
+--<br>
+{% trans %}Sent by {{brand}}{% endtrans %}
