--- a/app/templates/email/base.twig
+++ b/app/templates/email/base.twig
@@ -1,6 +1,6 @@
 <p>{% trans %}Hi there,{% endtrans %}</p>
 
-{% block content %}
+{% block body %}
 <p>{% trans %}No content available.{% endtrans %}</p>
 {% endblock %}
 --<br>
