update strings on settings page

--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -31,7 +31,7 @@
 					<input type="text" class="form-control" name="github" id="github" value="{{github}}" placeholder="{{github_placeholder}}">
 				</div>
 				<div class="form-group">
-					<button type="submit" class="btn btn-default">{% trans "Change linked profiles" %}</button>
+					<button type="submit" class="btn btn-default">{% trans "Save links" %}</button>
 				</div>
 			</form>
 		</div>
